## Copyright 2014 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

jincdir = $(includedir)

jinc_HEADERS = actor.hh camera.hh character.hh charselect.hh controller.hh \
	core.hh defs.hh delegate.hh light.hh loadable.hh main.hh mainmenu.hh \
	menu.hh prop.hh roster.hh scene.hh sceneview.hh scenewalk.hh splash.hh \
	state.hh node.hh
